# super-prompt

./: .cursorrules  .gitignore  .superignore  LICENSE  README.md  quickstart.txt  spec.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.tsx  index.js  index.tsx
client/src/components/: CompiledPrompt.js  ContentBlock.js  FileIcon.js  FileSelector.js  PreviewPanel.js  PromptEditor.js  PromptMetadata.js  PromptMetadata.tsx  SystemPromptInput.js  compiled-prompt.tsx  content-block.tsx  file-icon.tsx  file-selector.tsx  output-prompt.tsx  preview-panel.tsx  prompt-editor.tsx  prompt-metadata.tsx  system-prompt-input.tsx
client/src/config/: presets.js  presets.ts
client/src/pages/: Home.js  home.tsx
client/src/services/: api.js  api.ts
client/src/types/: prompt.ts
docker/: Dockerfile.client  Dockerfile.server  nginx.conf
server/: main.py  pyproject.toml  requirements.txt
server/models/: prompt_model.py
server/routers/: files.py  prompts.py
server/services/: file_service.py  suggestion_service.py
